[package]
name = "assbreak"
version = "0.2.1"
authors = ["L14ms1 <l14ms1@protonmail.com>"]
description = "a tool that helps brute-force a website and address mail."
repository = "https://github.com/L14ms111/assbreak"
license = "MPL-2.0"
keywords = ["brute-force", "website", "l14ms1", "email", "imap", "rpc"]
edition = "2018"
build = "build.rs"

[package.metadata.winres]
ProductName = "assbreak"
OriginalFilename = "assbreak.exe"
ProductVersion = "0.2.1"
FileDescription = "a tool that helps brute-force a website and address mail."

[dependencies]
# online 
discord-rpc-client = "^0.2"
imap = "2.3.0"
native-tls = "0.2.6"
reqwest = { version = "0.11", features = ["blocking", "json"] }
selenium_webdriver = "0.1.7"

# offline
console = "0.14.0"
dialoguer = "0.7.1"
directories = "3.0.1"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
threadpool = "1.8.1"
unicode-segmentation = "1.7.1"

# to remove
ureq = "1.5.2"
colored = "2"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
